# delulu

./: .gitignore  .pre-commit-config.yaml  .typos.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
delulu-apps/travel-agent/: Cargo.toml  build.rs  build.rs.bak  pyproject.toml
delulu-apps/travel-agent/src/: consent_cookie.rs  flights_proto.rs  flights_query_builder.rs  flights_results_parser.rs  flights_search.rs  hotels_query_builder.rs  hotels_results_parser.rs  hotels_search.rs  lib.rs  main_cli_flights.rs  main_cli_hotels.rs  main_mcp.rs
delulu-apps/travel-agent/src/proto/: cookies.proto  flights.proto  google_travel_flights.proto  google_travel_flights.rs  google_travel_hotels.proto  google_travel_hotels.rs
delulu-apps/travel-agent/src/schemas/: flights-response.json  hotels-response.json
delulu-apps/travel-agent/tests/: e2e_smoke_socs_verification.rs  mcp_helpers.rs  mcp_test_utils.py  t_flights_encoding_fixtures.rs  t_flights_encoding_properties.rs  t_flights_encoding_structural.rs  t_flights_integration_live.rs  t_flights_parsing_fixtures.rs  t_hardcoded_browser_cookies.rs  t_hotels_codec_roundtrip.rs  t_hotels_decoding_fixtures.rs  t_hotels_integration_live.rs  t_hotels_parsing_fixtures.rs  t_hotels_thirtyfour.rs  t_mcp_http.rs  t_mcp_stdio.rs  t_mcp_tools.rs  test_mcp_http.py  test_mcp_integration.py  test_mcp_stdio.py
delulu-apps/travel-agent/tests/fixtures-flights-encoding/: tfs_vectors.json
delulu-apps/travel-agent/tests/fixtures-flights-parsing/: domestic+business-lax_ord.html.zst  layover-mad_nrt.html.zst  layover-yyz_cdg.html.zst  longhaul-lax_syd.html.zst  nonstop-sfo_jfk_economy.html.zst  overnight+1day-sfo_lhr_economy.html.zst
delulu-apps/travel-agent/tests/fixtures-google-hotels/: ts_vectors.json
delulu-apps/travel-agent/tests/fixtures-hotels-parsing/: london-long-stay.html.zst  nyc-families.html.zst  paris-budget.html.zst  tokyo-5star.html.zst  tokyo-standard.html.zst
delulu-apps/travel-agent/tests/schemas/: flights-response.json  hotels-response.json
delulu-internals/query-queues/: Cargo.toml  LICENSE-MIT
delulu-internals/query-queues/src/: lib.rs
