[package]
name = "delulu-travel-agent"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "CLI tools and MCP server for travel services"

[dependencies]
wreq = { version = "6.0.0-rc.26", features = ["json", "brotli", "gzip", "zstd", "tracing"] }
wreq-util = "3.0.0-rc.9"
scraper = "0.17"
regex = { version = "1.10", default-features = false }
delulu-query-queues = { path = "../../delulu-internals/query-queues" }
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1.0"
chrono = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.20"
prost = "0.13"
term_size = "0.3"
urlencoding = "2"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
zstd = "0.13"
thirtyfour = "0.36"

[package.metadata.mcp]
name = "delulu-travel-agent"
version = "0.1.0"
description = "Travel search services for flights and hotels"

[[bin]]
name = "delulu-flights"
path = "src/main_cli_flights.rs"

[[bin]]
name = "delulu-hotels"
path = "src/main_cli_hotels.rs"
