[project]
name = "delulu-travel-agent"
version = "0.1.0"
description = "CLI tools and MCP server for travel services"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["mcp>=1.0"]

[tool.uv]
dev-dependencies = ["mcp>=1.0"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
