[project]
name = "delulu-travel-agent"
version = "0.1.0"
description = "CLI tools and MCP server for travel services"
requires-python = ">=3.10"
dependencies = ["jsonschema"]

[dependency-groups]
dev = ["mcp>=1.0", "jsonschema"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
